--- a/ui.html
+++ b/ui.html
@@ -30,6 +30,8 @@
 
     <label for="rows">Rows:</label>
     <input type="number" id="rows" value="10" min="1"/>
+    <label>Row height: <input id="rowHeight" type="number" value="56" min="24" step="1" /> </label>
+
   </div>
 
   <button id="run">Run</button>
