--- a/ui.html
+++ b/ui.html
@@ -1,59 +1,73 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 16px;
-      width: 240px;
-    }
-    label {
-      display: block;
-      margin-top: 8px;
-    }
-    input {
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
-  <label for="mode">Mode:</label>
-  <select id="mode">
-    <option value="create">Create New Grid</option>
-    <option value="realign">Re-align Selected Grid</option>
-  </select>
-
-  <div id="create-options">
-    <label for="columns">Columns:</label>
-    <input type="number" id="columns" value="5" min="1"/>
-
-    <label for="rows">Rows:</label>
-    <input type="number" id="rows" value="10" min="1"/>
-    <label>Row height: <input id="rowHeight" type="number" value="56" min="24" step="1" /> </label>
-
-  </div>
-
-  <button id="run">Run</button>
-
-  <script>
-    const modeSelect = document.getElementById('mode');
-    const createOptions = document.getElementById('create-options');
-
-    modeSelect.addEventListener('change', () => {
-      if (modeSelect.value === 'create') {
-        createOptions.style.display = 'block';
-      } else {
-        createOptions.style.display = 'none';
+  <head>
+    <meta charset="UTF-8" />
+    <style>
+      body {
+        font-family: sans-serif;
+        width: 240px;
+        padding: 16px;
       }
-    });
+      label {
+        display: block;
+        margin-bottom: 8px;
+      }
+      input {
+        width: 100%;
+        box-sizing: border-box;
+      }
+      button {
+        width: 100%;
+        margin-top: 8px;
+        padding: 8px;
+      }
+    </style>
+  </head>
+  <body>
+    <label>
+      Columns:
+      <input id="columns" type="number" value="5" min="1" />
+    </label>
+    <label>
+      Rows:
+      <input id="rows" type="number" value="10" min="1" />
+    </label>
+    <label>
+      Row Height:
+      <input id="rowHeight" type="number" value="56" min="24" step="1" />
+    </label>
+    <button id="create">Create Grid</button>
+    <button id="realign">Realign Columns</button>
 
-    document.getElementById('run').addEventListener('click', () => {
-      const mode = modeSelect.value;
-      const columns = parseInt(document.getElementById('columns').value, 10);
-      const rows = parseInt(document.getElementById('rows').value, 10);
-      parent.postMessage({ pluginMessage: { mode, columns, rows } }, '*');
-    });
-  </script>
-</body>
+    <script>
+      document.getElementById('create').onclick = () => {
+        const columns = parseInt(document.getElementById('columns').value, 10);
+        const rows = parseInt(document.getElementById('rows').value, 10);
+        const rowHeight = parseInt(document.getElementById('rowHeight').value, 10);
+
+        parent.postMessage(
+          {
+            pluginMessage: {
+              type: 'create-grid',
+              columns,
+              rows,
+              rowHeight
+            }
+          },
+          '*'
+        );
+      };
+
+      document.getElementById('realign').onclick = () => {
+        parent.postMessage(
+          {
+            pluginMessage: {
+              type: 'realign-columns'
+            }
+          },
+          '*'
+        );
+      };
+    </script>
+  </body>
 </html>
